# KORA

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  appendix_1_kora_technical_overview.md  appendix_2_kora_execution_and_quant_model.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: EXECUTIVE-SUMMARY.md  GOVERNANCE.md  README.md  benchmark-real-app.md  community_launch_plan_v0_1_alpha.md  good_first_issues.md  release_note_v0_1_alpha.md  technical_preview_results.md  telemetry-and-observability.md
experiments/: README.md  run_benchmark.py
kora/: __init__.py  cli.py  executor.py  model_call.py  provider_fixture.py  studio_execution_fixture.py  studio_harness_comparison.py  studio_harness_runs.py  studio_model_catalog.py  studio_report_viewer.py  studio_runtime_status.py  studio_server.py  studio_status.py  task_ir.py  verification.py
scripts/: check_kora_studio_preview.py
studio/: README.md
tests/: test_benchmark_runner.py  test_customer_support_triage_fake_validation.py  test_direct_vs_kora_cases.py  test_executor.py  test_kora_studio_execution_fixture.py  test_kora_studio_fixtures.py  test_kora_studio_harness_comparison.py  test_kora_studio_harness_runs.py  test_kora_studio_model_catalog.py  test_kora_studio_preview_smoke.py  test_kora_studio_report_viewer.py  test_kora_studio_runtime_status.py  test_kora_studio_server.py  test_local_validation_reviewer_packet.py  test_model_call.py  test_provider_fixture.py  test_real_model_call_validation_fake.py  test_runtime_integrated_benchmark.py
(+174 files in other folders)
